[gd_scene load_steps=20 format=3 uid="uid://bhkutx2hei60b"]

[ext_resource type="Script" path="res://dynamic/Slime.gd" id="1_v0mq6"]
[ext_resource type="Texture2D" uid="uid://kjjrldglgd1i" path="res://dynamic/slime/slime_jump_1.png" id="2_4k3av"]
[ext_resource type="Texture2D" uid="uid://c1brdtdj8gjiq" path="res://dynamic/slime/slime_jump_2.png" id="3_8yr3o"]
[ext_resource type="Texture2D" uid="uid://cyw2uuwy8gt1n" path="res://dynamic/slime/slime_jump_3.png" id="4_b6s5s"]
[ext_resource type="Texture2D" uid="uid://du2bx78ds3p7x" path="res://dynamic/slime/slime_jump_4.png" id="5_3kjff"]
[ext_resource type="Texture2D" uid="uid://chippl036dp4f" path="res://dynamic/slime/slime_jump_5.png" id="6_vtgl3"]
[ext_resource type="Texture2D" uid="uid://dxv1hlk4krghi" path="res://dynamic/slime/slime_jump_6.png" id="7_irg88"]
[ext_resource type="Texture2D" uid="uid://d3274faejs8dk" path="res://dynamic/slime/slime_jump_7.png" id="8_6n6th"]
[ext_resource type="Texture2D" uid="uid://dcdnxmmqep7jw" path="res://dynamic/slime/slime_jump_8.png" id="9_fs4m2"]
[ext_resource type="Texture2D" uid="uid://c3jkq4ym28lro" path="res://dynamic/slime/slime_jump_9.png" id="10_qxa6m"]
[ext_resource type="Texture2D" uid="uid://uhum03wfpdq7" path="res://dynamic/slime/slime_jump_10.png" id="11_xk36c"]
[ext_resource type="Texture2D" uid="uid://caajsnyl8bitk" path="res://dynamic/slime/slime_jump_11.png" id="12_ktqxp"]
[ext_resource type="Script" path="res://dynamic/test.gd" id="13_ng0pk"]
[ext_resource type="PackedScene" uid="uid://sxradkvyaick" path="res://dynamic/1_player/UI/BaseUI.tscn" id="13_wpqx2"]
[ext_resource type="PackedScene" uid="uid://dxtu82qvk26e2" path="res://dynamic/3_attack/attack.tscn" id="14_m7ikp"]
[ext_resource type="AudioStream" uid="uid://dhh80i0r7funi" path="res://static/audio/weapon/sword1/sword_sound_2.wav" id="15_ukrxv"]
[ext_resource type="AudioStream" uid="uid://s2xmsk3eh8gv" path="res://static/audio/player/game_over/gameover_2.wav" id="16_jb6ls"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vinfm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4k3av")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4k3av")
}, {
"duration": 1.0,
"texture": ExtResource("3_8yr3o")
}, {
"duration": 1.0,
"texture": ExtResource("4_b6s5s")
}, {
"duration": 1.0,
"texture": ExtResource("5_3kjff")
}, {
"duration": 1.0,
"texture": ExtResource("6_vtgl3")
}, {
"duration": 1.0,
"texture": ExtResource("7_irg88")
}, {
"duration": 1.0,
"texture": ExtResource("8_6n6th")
}, {
"duration": 1.0,
"texture": ExtResource("9_fs4m2")
}, {
"duration": 1.0,
"texture": ExtResource("10_qxa6m")
}, {
"duration": 1.0,
"texture": ExtResource("11_xk36c")
}, {
"duration": 1.0,
"texture": ExtResource("12_ktqxp")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ix0sy"]
size = Vector2(16.0606, 9.24242)

[node name="Slime" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 37
script = ExtResource("1_v0mq6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3.02, 4)
sprite_frames = SubResource("SpriteFrames_vinfm")
animation = &"move"
frame = 1
frame_progress = 0.898628
speed_scale = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.500027, 18.25)
scale = Vector2(3.3, 3.3)
shape = SubResource("RectangleShape2D_ix0sy")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Healthbar" parent="." instance=ExtResource("13_wpqx2")]

[node name="HpBar" parent="Healthbar" index="0"]
anchor_top = -0.0246154
offset_right = 39.0
offset_bottom = 9.5

[node name="PausePanel" parent="Healthbar" index="1"]
offset_left = -265.0
offset_top = -236.0
offset_right = -265.0
offset_bottom = -236.0

[node name="test" type="Node2D" parent="."]
script = ExtResource("13_ng0pk")

[node name="attack" parent="." instance=ExtResource("14_m7ikp")]

[node name="knife_sound" type="AudioStreamPlayer2D" parent="attack"]
stream = ExtResource("15_ukrxv")
volume_db = -5.0

[node name="gameover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_jb6ls")

[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]

[editable path="Healthbar"]
[editable path="Healthbar/PausePanel"]
